--- a/styles/items.less
+++ b/styles/items.less
@@ -6,10 +6,17 @@
         justify-content: space-between;
 
         .logo-img {
-          width: 80px;
+        width: 80px;
         }
         .name {
-          width: calc(100% - 90px);
+        width: calc(100% - 90px);
+        }
+      }
+      .auto {
+        // height: auto;
+        min-height: 100%;
+        .editor {
+        min-height: 100%;
         }
       }
     }
@@ -26,6 +33,13 @@
         }
         .name {
           width: calc(100% - 90px);
+        }
+      }
+      .auto {
+        // height: auto;
+        min-height: 100%;
+        .editor {
+        min-height: 100%;
         }
       }
     }
@@ -51,6 +65,13 @@
           width: 100px;
         }
       }
+      .auto {
+        // height: auto;
+        min-height: 100%;
+        .editor {
+        min-height: 100%;
+        }
+      }
     }
   }
 
@@ -67,6 +88,13 @@
           width: calc(100% - 90px);
         }
       }
+      .auto {
+        // height: auto;
+        min-height: 100%;
+        .editor {
+        min-height: 100%;
+        }
+      }
     }
   }
 
@@ -81,6 +109,12 @@
         }
         .name {
           width: calc(100% - 90px);
+        }
+      }
+      .auto {
+        min-height: 100%;
+        .editor {
+        min-height: 100%;
         }
       }
     }
