--- a/templates/action.hbs
+++ b/templates/action.hbs
@@ -4,6 +4,8 @@
         <img class="logo-img" src="{{document.img}}" data-action="editImage" data-tooltip="{{document.name}}" />
         <span class="name">{{formInput fields.name value=item.name localize=true}}</span>
     </div>
-    {{formGroup systemFields.type value=systemSource.type localize=true}}
-    {{formInput systemFields.description enriched=enrichedDescription value=system.description name="system.description" toggled=true}}
+    <div class="auto">
+        {{formGroup systemFields.type value=systemSource.type localize=true}}
+        {{formInput systemFields.description enriched=enrichedDescription value=system.description name="system.description" toggled=true}}
+    </div>
 </section>
