--- a/templates/maitrise.hbs
+++ b/templates/maitrise.hbs
@@ -4,8 +4,10 @@
       <img class="logo-img" src="{{document.img}}" data-action="editImage" data-tooltip="{{document.name}}" />
       <span class="name">{{formInput fields.name value=item.name localize=true}}</span>
   </div>
-  {{formGroup systemFields.harmonique value=systemSource.harmonique localize=true}}
-  {{formGroup systemFields.prerequis value=systemSource.prerequis localize=true}}
-  {{formGroup systemFields.niveau value=systemSource.niveau localize=true}}
-  {{formInput systemFields.description enriched=enrichedDescription value=system.description name="system.description" toggled=true}}
+  <div class="auto">
+    {{formGroup systemFields.harmonique value=systemSource.harmonique localize=true}}
+    {{formGroup systemFields.prerequis value=systemSource.prerequis localize=true}}
+    {{formGroup systemFields.niveau value=systemSource.niveau localize=true}}
+    {{formInput systemFields.description enriched=enrichedDescription value=system.description name="system.description" toggled=true}}
+  </section>div>
 </section>
