--- a/templates/pouvoir.hbs
+++ b/templates/pouvoir.hbs
@@ -4,9 +4,11 @@
         <img class="logo-img" src="{{document.img}}" data-action="editImage" data-tooltip="{{document.name}}" />
         <span class="name">{{formInput fields.name value=item.name localize=true}}</span>
     </div>
-    <div class="details">
-        {{formGroup systemFields.utilise value=systemSource.utilise localize=true}}
-        {{formGroup systemFields.type value=systemSource.type localize=true}}
+    <div class="auto">
+        <div class="details">
+            {{formGroup systemFields.utilise value=systemSource.utilise localize=true}}
+            {{formGroup systemFields.type value=systemSource.type localize=true}}
+        </div>
+        {{formInput systemFields.description enriched=enrichedDescription value=system.description name="system.description" toggled=true}}
     </div>
-    {{formInput systemFields.description enriched=enrichedDescription value=system.description name="system.description" toggled=true}}
 </section>
