--- a/templates/atout.hbs
+++ b/templates/atout.hbs
@@ -4,8 +4,10 @@
         <img class="logo-img" src="{{document.img}}" data-action="editImage" data-tooltip="{{document.name}}" />
         <span class="name">{{formInput fields.name value=item.name localize=true}}</span>
     </div>
-    <div class="details">
-    {{formGroup systemFields.valeur value=systemSource.valeur localize=true}}
+    <div class="auto">
+        <div class="details">
+        {{formGroup systemFields.valeur value=systemSource.valeur localize=true}}
+        </div>
+        {{formInput systemFields.description enriched=enrichedDescription value=system.description name="system.description" toggled=true}}
     </div>
-    {{formInput systemFields.description enriched=enrichedDescription value=system.description name="system.description" toggled=true}}
 </section>
