--- a/styles/items.less
+++ b/styles/items.less
@@ -13,8 +13,8 @@
         }
       }
       .auto {
-        height: auto;
-        // min-height: 100%;
+        // height: auto;
+        min-height: 100%;
         .editor {
         min-height: 100%;
         }
