--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -35,6 +35,16 @@ body {
     font-size: @font-size-base;
     clear: both;
 
+    details {
+      font-size: @font-size-midlarge;
+      summary {
+        color: @color-blue;
+      }
+      i {
+        color: @color-blue;
+      }
+    }
+
     .adversaire-main {
       width: 100%;
       .adversaire-personnage {
