--- a/templates/adversaire/adversaire.hbs
+++ b/templates/adversaire/adversaire.hbs
@@ -3,6 +3,12 @@
     <!-- Personnage -->
     {{> "systems/penombre/templates/adversaire/partials/personnage.hbs" }}
 
+    <!-- Détails -->
+    <details>
+    <summary><i class="fas fa-comment-pen"></i></summary>
+        {{formInput systemFields.details enriched=enrichedDescription value=system.details name="system.details" toggled=true}}
+    </details>
+
     <!-- Actions -->
     {{> "systems/penombre/templates/adversaire/partials/actions.hbs" }}
 
