Champ détail ajouté à fiche Adversaire. Icône invisible quand champ vide.

--- a/penombre.css
+++ b/penombre.css
@@ -1570,14 +1570,16 @@ body.theme-light .penombre.adversaire .adversaire-content {
   font-size: 17px;
   clear: both;
 }
-.penombre.adversaire .adversaire-content details {
-  font-size: 25px;
-}
 .penombre.adversaire .adversaire-content details summary {
+  font-size: 25px;
   color: #124b63;
 }
 .penombre.adversaire .adversaire-content details i {
+  font-size: 25px;
   color: #124b63;
+}
+.penombre.adversaire .adversaire-content details .editor {
+  font-size: 13px;
 }
 .penombre.adversaire .adversaire-content .adversaire-main {
   width: 100%;
