--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -36,13 +36,19 @@ body {
     clear: both;
 
     details {
-      font-size: @font-size-midlarge;
       summary {
+        font-size: @font-size-midlarge;
         color: @color-blue;
       }
       i {
+        font-size: @font-size-midlarge;
         color: @color-blue;
       }
+
+      .editor {
+        font-size: @font-size-small;
+      }
+
     }
 
     .adversaire-main {
