Avec les polices adéquates, c'est mieux

--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -49,6 +49,16 @@ body {
         font-size: @font-size-small;
       }
 
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        font-family: @font-cattedrale;
+        // text-transform: uppercase;
+        color: @color-primary;
+      }
     }
 
     .adversaire-main {
