--- a/penombre.css
+++ b/penombre.css
@@ -1581,6 +1581,15 @@ body.theme-light .penombre.adversaire .adversaire-content {
 .penombre.adversaire .adversaire-content details .editor {
   font-size: 13px;
 }
+.penombre.adversaire .adversaire-content details h1,
+.penombre.adversaire .adversaire-content details h2,
+.penombre.adversaire .adversaire-content details h3,
+.penombre.adversaire .adversaire-content details h4,
+.penombre.adversaire .adversaire-content details h5,
+.penombre.adversaire .adversaire-content details h6 {
+  font-family: "Cattedrale";
+  color: #a56135;
+}
 .penombre.adversaire .adversaire-content .adversaire-main {
   width: 100%;
 }
