--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -59,6 +59,10 @@ body {
         // text-transform: uppercase;
         color: @color-primary;
       }
+
+      p {
+        font-size: @font-size-small;
+      }
     }
 
     .adversaire-main {
