--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -127,7 +127,7 @@ body {
               }
               .description {
                 font-family: @font-cattedrale;
-                color: @color-primary-clear;
+                color: @color-primary;
               }
             }
           }
@@ -198,7 +198,7 @@ body {
             &:nth-child(even) {
             }
             &:nth-child(odd) {
-            color: @color-primary-clear
+            color: @color-primary
             }
             position: relative;
             border: 1px solid #ccc;
@@ -246,7 +246,7 @@ body {
             &:nth-child(even) {
             }
             &:nth-child(odd) {
-            color: @color-primary-clear
+            color: @color-primary
             }
             position: relative;
             border: 1px solid #ccc;
