Pointeur souris montre atouts cliquable dans prompt lancer dés

--- a/penombre.css
+++ b/penombre.css
@@ -1333,6 +1333,9 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
           }
           */
 }
+.penombre-roll-dialog .line-2 fieldset .atouts .atout:hover {
+  cursor: pointer;
+}
 .penombre-roll-dialog .line-2 fieldset .atouts .atout:nth-child(even) {
   background-color: silver;
 }
