--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -74,6 +74,10 @@
           margin-left: 2px;
           margin-right: 2px;
 
+          &:hover {
+            cursor: pointer;
+          }
+
           &:nth-child(even) {
             background-color : silver;
           }
