--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -41,8 +41,10 @@ body {
         color: @color-blue;
       }
       i {
+        &.fa-message-pen {
         font-size: @font-size-midlarge;
         color: @color-blue;
+        }
       }
 
       .editor {
