--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -202,6 +202,7 @@ body {
       &.eminence {
         .eminence-content {
           background-color: @background-light; // Si et seulement si on est en mode clair (et pas sombre) de la fiche
+          background-image: url("/systems/penombre/assets/ui/fond.webp");
 
           // Section timbre
           .eminence-timbre {
