--- a/templates/chat/dice-tooltip.hbs
+++ b/templates/chat/dice-tooltip.hbs
@@ -27,9 +27,9 @@
             </section>
       {{/each}}
       <div class="reroll-container">
-        <button class="reroll-conscience hidden">Relance (Conscience)</button>
-        <button class="reroll-reserve hidden">Relance (Réserve)</button>
-      </div>    
+        <button class="reroll-conscience hidden">{{localize "PENOMBRE.ui.relanceConscience"}}</button>
+        <button class="reroll-reserve hidden">{{localize "PENOMBRE.ui.relanceReserve"}}</button>
+      </div>
     </div>
   </div>
 {{/if}}
